Fix raw storage volume creation for allocation < capacity.
CreateXMLFrom changes accidentally caused all raw volume creation to be
fully allocated (as though allocation == capacity). Fix this.

Also force CreateXMLFrom to maintain the previous behavior: sparseness
should still be maintained since we search for holes when copying, and the
clone behavior hasn't been tested with anything but the broken behavior.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Mon Jun 22 12:31:38 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/storage_backend_fs.c src/storage_driver.c:
+	Fix raw storage volume creation for allocation < capacity.
+
+CreateXMLFrom changes accidentally caused all raw volume creation to be
+fully allocated (as though allocation == capacity). Fix this.
+
+Also force CreateXMLFrom to maintain the previous behavior: sparseness
+should still be maintained since we search for holes when copying, and the
+clone behavior hasn't been tested with anything but the broken behavior.
+
 Mon Jun 22 11:09:18 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/test.c: Fix domain ID after redefining a running VM
