Activate virtual networks initialized in custom test driver.
If specifying a custom test driver, virtual networks were not 'activated'
on driver init. This differs from the behavior of domains and storage pools,
so fix it. Also improve a couple error messages in that area.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 22 12:38:19 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/test.c: Activate virtual networks initialized in custom test driver.
+
 Mon Jun 22 12:35:34 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/util.c: Fix segfault if storage pool has no type attribute
