--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jun 24 19:40:43 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* po/*: update a lot of translations, and regenerate the po* files
+
 Wed Jun 24 19:28:16 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in libvirt.spec.in src/Makefile.am
