Fix a couple of state problems * src/qemu_driver.c: fix a domain state problem after   migration, patch  by Federico Simoncelli, fixes #507537 * src/domain_conf.c:  fix a transcient domain state problem after   destroy, patch  by Federico Simoncelli, fixes #507304 * AUTHORS: add Federico Simoncelli and Javier Fontan daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -72,6 +72,8 @@ Patches have also been contributed by:
   Laine Stump          <laine@redhat.com>
   Abel Míguez Rodríguez<amiguezr@pdi.ucm.es>
   Doug Goldstein       <cardoe@gentoo.org>
+  Javier Fontan        <jfontan@gmail.com>
+  Federico Simoncelli  <federico.simoncelli@gmail.com>
 
   [....send patches to get your name here....]
 
