fix UML driver logging macros * src/uml_driver.c: fix UML driver logging macros, patch by Amy Griffis * AUTHORS: adding Amy Griffis Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -74,6 +74,7 @@ Patches have also been contributed by:
   Doug Goldstein       <cardoe@gentoo.org>
   Javier Fontan        <jfontan@gmail.com>
   Federico Simoncelli  <federico.simoncelli@gmail.com>
+  Amy Griffis          <amy.griffis@hp.com>
 
   [....send patches to get your name here....]
 
