--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jun 26 16:07:54 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/node_device.c src/node_device_hal.h src/node_device_hal_linux.c:
+	  fix bogus WWN in NPIV support, patch by David Allan
+
 Thu Jun 25 17:12:09 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/storage_conf.c: fix reading of storage pool definitions at startup
