allow to create storage volumes on disk backend * src/libvirt_private.syms src/parthelper.c src/storage_backend_disk.c   src/storage_conf.c src/storage_conf.h: allow to create storage   volumes on disk backend, patches by Henrik Persson * AUTHORS: add Henrik Persson Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -75,6 +75,7 @@ Patches have also been contributed by:
   Javier Fontan        <jfontan@gmail.com>
   Federico Simoncelli  <federico.simoncelli@gmail.com>
   Amy Griffis          <amy.griffis@hp.com>
+  Henrik Persson E     <henrik.e.persson@ericsson.com>
 
   [....send patches to get your name here....]
 
