--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Mon Jun 29 12:48:20 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	Use libcap-ng to clear capabilities for many child processes
+	* src/Makefile.am: Link to libcap-ng in util code
+	* src/qemu_conf.c: Clear capabilities when running qemu -help
+	* src/qemu_driver.c: Clear capabilities when running VMs
+	* src/remote_internal.c: Clear capabilities for auto-spawned
+	libvirtd session daemon, and SSH tunnel client
+	* src/uml_driver.c: Clear capabilities for UML VMs
+	* src/util.h, src/util.c: Add virExec() flag to allow
+	clearing of capabilities when spawning processes
+
 Mon Jun 29 12:28:20 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Prepare for using libcap-ng
