Fix some missing parts in network code and schemas * docs/schemas/network.rng: fix the network schemas to match   new accepted elements, patch by Satoru SATOH * src/network_conf.c: fix network driver to save the domain name   in XML if present, patch by Satoru SATOH * AUTHORS: adding Satoru SATOH Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -76,6 +76,7 @@ Patches have also been contributed by:
   Federico Simoncelli  <federico.simoncelli@gmail.com>
   Amy Griffis          <amy.griffis@hp.com>
   Henrik Persson E     <henrik.e.persson@ericsson.com>
+  Satoru SATOH         <satoru.satoh@gmail.com>
 
   [....send patches to get your name here....]
 
