--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul  6 14:26:02 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* docs/downloads.html docs/downloads.html.in: update download
+	  informations after switch to git
+
 Fri Jul  3 16:21:48 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in libvirt.spec.in NEWS docs/* po/*: release of
