add cd and pwd commands to virsh
* src/virsh.c: adds cd and pwd commands to virsh useful for save and
  restore commands
* docs/virsh.pod virsh.1: update the documentation
* AUTHORS: add Paolo Bonzini

--- a/AUTHORS
+++ b/AUTHORS
@@ -77,6 +77,7 @@ Patches have also been contributed by:
   Amy Griffis          <amy.griffis@hp.com>
   Henrik Persson E     <henrik.e.persson@ericsson.com>
   Satoru SATOH         <satoru.satoh@gmail.com>
+  Paolo Bonzini        <pbonzini@redhat.com>
 
   [....send patches to get your name here....]
 
