Added Matthias Bolte to AUTHORS list

--- a/AUTHORS
+++ b/AUTHORS
@@ -78,6 +78,7 @@ Patches have also been contributed by:
   Henrik Persson E     <henrik.e.persson@ericsson.com>
   Satoru SATOH         <satoru.satoh@gmail.com>
   Paolo Bonzini        <pbonzini@redhat.com>
+  Matthias Bolte       <matthias.bolte@googlemail.com>
 
   [....send patches to get your name here....]
 
