Add virBufferFreeAndReset() and replace free()
Replace free(virBufferContentAndReset()) with virBufferFreeAndReset().
Update documentation and replace all remaining calls to free() with
calls to VIR_FREE(). Also add missing calls to virBufferFreeAndReset()
and virReportOOMError() in OOM error cases.

--- a/HACKING
+++ b/HACKING
@@ -293,10 +293,11 @@ eg typical usage is as follows:
      ...
      virBufferAddLit(&buf, "</domain>\n");
 
-     ....
+     ...
 
      if (virBufferError(&buf)) {
-         __virRaiseError(...);
+         virBufferFreeAndReset(&buf);
+         virReportOOMError(...);
          return NULL;
      }
 
