add virsh --suspend arg to migrate command
This adds a new flag, VIR_MIGRATE_PAUSED, that mandates pausing
the migrated VM before starting it.

* include/libvirt/libvirt.h.in (virDomainMigrateFlags): Add VIR_MIGRATE_PAUSED.
* src/qemu/qemu_driver.c (qemudDomainMigrateFinish2): Handle VIR_MIGRATE_PAUSED.
* tools/virsh.c (opts_migrate): Add --suspend. (cmdMigrate): Handle it.
* tools/virsh.pod (migrate): Document it.

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -302,10 +302,11 @@ except that it does some error checking.
 The editor used can be supplied by the C<$EDITOR> environment
 variable, or if that is not defined defaults to C<vi>.
 
-=item B<migrate> optional I<--live> I<domain-id> I<desturi> I<migrateuri>
+=item B<migrate> optional I<--live> I<--suspend> I<domain-id> I<desturi> I<migrateuri>
 
-Migrate domain to another host.  Add --live for live migration. The I<desturi>
-is the connection URI of the destination host, and I<migrateuri> is the
+Migrate domain to another host.  Add --live for live migration; --suspend
+leaves the domain paused on the destination host. The I<desturi> is the
+connection URI of the destination host, and I<migrateuri> is the
 migration URI, which usually can be omitted.
 
 =item B<reboot> I<domain-id>
